Fixed Navbar Height On Mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ html, body {
 }
 
 .navbar-mobile.active {
-    max-height: 200px;
+    max-height: 380px;
     opacity: 1;
     padding-bottom: 10px;
 }
